# ptui

./: Cargo.toml  README.md
docs/: guide.md
src/: main.rs  text.rs
