[package]
name = "ptui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.2.0"
crossterm = "0.26.1"
env = "0.0.0"
log = "0.4.17"
#ratatui = "0.20.0"
tui = "0.19.0"
tui-logger = "0.8.3"
uuid = "1.3.0"
