[package]
name = "ptui"
version = "0.1.0"
edition = "2021"

[dependencies]
arboard = "3.2.0"
crossterm = "0.26.1"
log = "0.4.17"
#ratatui = "0.20.0"
tui = "0.19.0"
tui-logger = "0.8.3"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
pcli = { path = "../pcli" }
tui-textarea = "0.2.0"
dirs = "5.0.0"
exitcode = "1.1.2"
